--- a/css/other-styles.css
+++ b/css/other-styles.css
@@ -1,19 +1,20 @@
-/* :root {
-  font-size: 16px;
+:root {
+  font-size: 46px;
 }
 
 div.container {
-  font-size: 80px;
+  font-size: 3px;
   padding: 20px;
   border: 5px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: column nowrap;
+  width: 70%;
 }
 
 div.container p.em {
-  font-size: 2em;
+  font-size: 1em;
   border: 2px solid darkblue;
   width: fit-content;
   padding: 20px;
@@ -24,4 +25,6 @@ div.container p.rem {
   border: 2px solid darkgoldenrod;
   width: fit-content;
   padding: 20px;
-} */
+}
+
+/* em vs. rem */
