--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-size: 62.5%;
 }
 
 *,
@@ -13,7 +14,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-size: 20px;
+  font-size: 2rem;
 }
 
 img {
@@ -24,12 +25,12 @@ img {
 p {
   line-height: 1.25;
   margin: 20px 0;
-  color: red;
 }
 
 .container {
-  max-width: 600px;
-  margin: 0 auto;
+width: 90vw;
+height: 75vh;  
+margin: 0 auto;
 }
 
 strong {
@@ -54,7 +55,7 @@ header {
 
 /* Header Styles Here */
 header h1 {
-  font-size: 20px;
+  font-size: 2rem;
 }
 
 @media (max-width: 515px) {
@@ -75,7 +76,7 @@ header nav {
 
 header nav a {
   margin-left: 20px;
-  font-size: 18px;
+  font-size: 1.8rem;
 }
 
 header nav .first-anchor {
@@ -125,7 +126,7 @@ header nav .first-anchor {
   cursor: pointer;
   width: 200px;
   height: 45px;
-  font-size: 20px;
+  font-size: 2rem;
   border-radius: 10px;
 }
 
@@ -133,7 +134,7 @@ header nav .first-anchor {
   .book-flight-btn {
     width: 90%;
     height: 50px;
-    font-size: 25px;
+    font-size: 2.5rem;
   }
 }
 
@@ -151,14 +152,14 @@ header nav .first-anchor {
   cursor: pointer;
   width: 90%;
   height: 45px;
-  font-size: 25px;
+  font-size: 2.5rem;
   border-radius: 10px;
 }
 
 @media (min-width: 515px) {
   .book-flight-btn-mobile {
     max-width: 200px;
-    font-size: 20px;
+    font-size: 2rem;
   }
 }
 
